# trees

./: .gitignore  CMakeLists.txt  Makefile  bison_output_visitor.cpp  bison_output_visitor.h  bison_to_ast_visitor.cpp  bison_to_ast_visitor.hpp  errors.h  foundry-lang.cpp  foundry-parse.cpp  foundry-tree.cpp  header_output_visitor.cpp  header_output_visitor.hpp  impl_output_visitor.cpp  impl_output_visitor.hpp  inline_simple_visitor.cpp  inline_simple_visitor.h  lex_output_visitor.cpp  lex_output_visitor.h  mark_nodes_visitor.cpp  mark_nodes_visitor.hpp  output_visitor.cpp  output_visitor.hpp  parse.ftree  parse.h  parse_cst.fparse  parse_cst.ll  parse_cst.yy  parse_cst_cst.cpp  parse_cst_cst.hpp  parse_cst_to_ast_visitor.cpp  parse_cst_to_ast_visitor.h  parse_tree.cpp  parse_tree.hpp  resolve_literals_visitor.cpp  resolve_literals_visitor.h  resolve_regexes_visitor.cpp  resolve_regexes_visitor.h  resolve_symbols_visitor.cpp  resolve_symbols_visitor.h  (+26 more)
doc/: foundry-tree
lang/: .gitignore  Makefile  bison_output_visitor.cpp  bison_to_ast_visitor.hpp  foundry-parse.cpp  header_output_visitor.cpp  impl_output_visitor.hpp  lex_output_visitor.cpp  parse.ftree  parse_cst.yy  parse_cst_cst.cpp  parse_cst_cst.hpp  parse_tree.cpp  parse_tree.hpp  tree_bison.yy  tree_bison_cst.hpp  tree_bison_tree.cpp  tree_cst.cpp  tree_cst.ll  tree_cst_cst.cpp  tree_cst_tree.hpp  unroll_repetitions_visitor.cpp
parse/: .gitignore  Makefile  bison_output_visitor.cpp  bison_output_visitor.h  cst_to_ast_visitor.cpp  cst_to_ast_visitor.h  errors.h  foundry-parse.cpp  inline_simple_visitor.cpp  inline_simple_visitor.h  lex_output_visitor.cpp  lex_output_visitor.h  parse.fparse  parse.ftree  parse.h  parse.ll  parse.yy  parse_cst_to_ast_visitor.cpp  parse_cst_to_ast_visitor.h  resolve_literals_visitor.cpp  resolve_literals_visitor.h  resolve_regexes_visitor.cpp  resolve_regexes_visitor.h  resolve_symbols_visitor.cpp  resolve_symbols_visitor.h  unroll_repetitions_visitor.cpp  unroll_repetitions_visitor.h
tree/: .gitignore  Makefile  bison_to_ast_visitor.cpp  bison_to_ast_visitor.hpp  cst_to_ast_visitor.cpp  cst_to_ast_visitor.hpp  foundry-tree.cpp  header_output_visitor.cpp  header_output_visitor.hpp  impl_output_visitor.cpp  impl_output_visitor.hpp  mark_nodes_visitor.cpp  mark_nodes_visitor.hpp  smartpointer_visitor.cpp  smartpointer_visitor.hpp  tree.ftree  tree_bison.cpp  tree_bison.ll  tree_bison.yy  tree_bison_context.hpp  tree_bison_tree.cpp  tree_bison_tree.hpp  tree_cst.cpp  tree_cst.ll  tree_cst.yy  tree_cst_to_ast_visitor.cpp  tree_cst_tree.cpp  tree_cst_tree.hpp  tree_description.cpp  tree_description.ll  tree_description.yy  tree_tree.cpp  tree_tree.hpp
tree/treecc/: .gitignore  output_visitor.cpp  tree.ll  tree.yy  tree_context.hpp  tree_tree.hpp  treecc.cpp
